Switched turned off scss file watcher to just focus on the css. Fixed issue with banner not showing on larger displays. Banner now working on most displays. Will include remaining. Removed style links for scss

--- a/wanderingapp/static/wanderingapp/sass/components/_banner.scss
+++ b/wanderingapp/static/wanderingapp/sass/components/_banner.scss
@@ -95,7 +95,7 @@
   }
 
   @include breakpoint('<=medium') {
-    @include padding(18rem, 3rem);
+    @include padding(9rem, 3rem);
   }
 
   @include breakpoint('<=small') {
